--- a/Scenario_3.html
+++ b/Scenario_3.html
@@ -17,7 +17,7 @@
         <li class = "list">325147</li>
         <li class = "list">321469</li>
     </ul>
-<p class = "here"></p>
+<p id = "here"></p>
 <script>
 function theLuckyOne() {
     var listCount = document.querySelectorAll(".list");
